# slimey

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
geGL/: CMakeLists.txt
geGL/src/geGL/: OpenGL.h  OpenGLObject.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/gl_wrapper/gl_wrapper/: buffer.hpp  index_buffer.hpp  shader.hpp  shader_program.hpp  texture2d32f.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
include/simulation/simulation/: agent.hpp  renderer.hpp  simulator.hpp  window.hpp
shaders/: agent.glsl  fragment_shader.glsl  trail.glsl  vertex_shader.glsl
slimey_core/: CMakeLists.txt
slimey_core/include/: slime_sim.hpp
slimey_core/include/rendering/: ComputeShaderL.hpp  ShaderL.hpp  SpriteL.hpp  TextureL.hpp  shader.hpp  slime_renderer.hpp
slimey_core/include/simulation/: agent.hpp  slime_sim.hpp  slimey.hpp
slimey_core/include/ui/: window.hpp
slimey_core/include/utils/: RAII.hpp  files.h
slimey_core/resources/shaders/: agent.comp.glsl  main.vert.glsl  textureProc.comp.glsl
slimey_core/src/: main.cpp  shader.cpp  slime_sim.cpp
slimey_core/src/rendering/: ComputeShaderL.cpp  ShaderL.cpp  SpriteL.cpp  TextureL.cpp  shader.cpp  slime_renderer.cpp
slimey_core/src/simulation/: slime_sim.cpp  slimey.cpp
slimey_core/src/simulation/generators/: InwardCircleParticleGenerator.cpp  PointParticleGenerator.cpp  RandomCircleParticleGenerator.cpp  RandomParticleGenerator.cpp  UniformParticleGenerator.cpp
slimey_core/src/ui/: window.cpp  window.hpp
slimey_core/src/utils/: files.cpp
src/: main.cpp
